# PlantDoctor-SensorLab

./: .gitignore  pyproject.toml
examples/: materials.py  parallel_plate.py
src/sensorlab/: constants.py
src/sensorlab/physics/: __init__.py  units.py
src/sensorlab/physics/boundary_conditions/: __init__.py  dirichlet.py
src/sensorlab/physics/electrodes/: __init__.py  base.py  rectangle_electrode.py
src/sensorlab/physics/electrostatics/: __init__.py  capacitance.py  coulomb.py  field.py  point_charge.py  potential.py  surface_sampler.py
src/sensorlab/physics/fields/: __init__.py  electric_displacement_field.py  electric_field.py  electric_field_grid.py  interpolate_sampler.py  potential_field.py  surface_charge_density.py
src/sensorlab/physics/geometry/: __init__.py  field.py  force.py  grid_2D.py  point.py  rectangle.py  (+2 more)
src/sensorlab/sampling/: __init__.py  field_sampler_2d.py
src/sensorlab/sandbox/: 01_single_charge.py  02_single_field.py  03_dipole.py  03_field_grid.py  04_potential.py  05_laplace_solver.py  06_parallel_plate_field.py
src/sensorlab/solvers/: __init__.py  laplace_solver.py
src/sensorlab/utils/: validation.py
src/sensorlab/visualization/: colors.py  primitives.py  renderer_matplotlib.py  scene.py  settings.py
tests/: test_capacitance.py  test_coulomb.py  test_dirichlet.py  test_electric_field_sampling.py  test_geometry.py  test_laplace.py  test_materials.py  test_materials_enhanced.py  test_potential.py  test_rectangles.py  test_sample_numeric.py  test_solver_basics.py  test_superposition.py  test_surface_charge_density.py
(+13 files in other folders)
